--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite": "^7.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "next": "^16.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
